Začetek izdelave domače strani

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GremoGor</title>
     <!-- <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> -->
-    <link rel="stylesheet" href="/static/css/index.css">
+    <link rel="stylesheet" href="../static/css/index.css">
 </head>
 <body>
     <div class="header">
-        <ol 
+        <label>GremoGor</label>
+        <ol>
+            <li><a href="#">search</a></li>
+            <li><a href="#">chat</a></li>
+            <li><a href="#">Regije</a></li>
+            <li><a href="#">Celine</a></li>
+            <li><a href="#">Države</a></li>
+            <li><a href="#">račun</a></li>
+        </ol>
+    </div>
+    <div class="gore">
+        <div><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/Triglav_-_winter.jpg/270px-Triglav_-_winter.jpg"><br>*Ime Gore*</div>
+        <div><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/Triglav_-_winter.jpg/270px-Triglav_-_winter.jpg"><br>*Ime Gore*</div>
+        <div><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/Triglav_-_winter.jpg/270px-Triglav_-_winter.jpg"><br>*Ime Gore*</div>
+        <div><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/Triglav_-_winter.jpg/270px-Triglav_-_winter.jpg"><br>*Ime Gore*</div>
     </div>
 </body>
 </html>
