--- a/templates/Register.html
+++ b/templates/Register.html
@@ -7,15 +7,28 @@
     <link rel="stylesheet" href="../static/css/register-css.css">
 </head>
 <body>
+    
     <div class="register">
-        
             <div class="left">
+                <h1>Registracija:</h1>
+                <div class="imepriimek">
+                    <div>Ime: <input type="text"></div>
+                    <div>Priimek: <input type="text"></div>
+                </div>
+
+                <div>
+                    Email: <input id="email" type="text">
+                </div>  
                 
+                    
+                    
+                    
+                    
             </div>
             
-            <div class="right">
+    <div class="right">
 
-            </div>
+    </div>
         
             
 
