--- a/static/css/register-css.css
+++ b/static/css/register-css.css
@@ -1,23 +1,55 @@
 .left{
-    background-color: red;
-    height: 60; 
-    width: 25px; 
+    background-color: rgb(238, 234, 234);
+    height: 100vh; 
+    width: 50%; 
+    display: flex;
+    justify-content: start;
+    align-items: baseline;
+    display: block;
+    padding: 20px;
+    padding-top: 100px 
+    
+    
+
 }
+.left input{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; 
+
+}
+#email {
+    width: 90%;
+}
+.imepriimek {
+    display: flex;
+}
+.imepriimek div {
+    margin-right: 20px;
+}
+
 .right{
     background-color: aqua;
-    height: 25px; 
-    width: 25px; 
+    height: 100vh; 
+    width: 50%; 
+
+   
 }
 
 .register{
-    background-color:rgb(236, 234, 234);
-    height:5000px;
-    width:60%;
+    background-color:rgb(255, 255, 255);
+    height:100vh;
+    width:100%;
+    justify-content: center;
+    display: flex;
+    align-items: center;
 }
 body{
-    width: 1000px;
     height: fit-content;
     margin: 0 auto;
     padding: 0%;
     background-color: white;
 }
+
+
+ 
