--- a/templates/Register.html
+++ b/templates/Register.html
@@ -12,13 +12,22 @@
             <div class="left">
                 <h1>Registracija:</h1>
                 <div class="imepriimek">
-                    <div>Ime: <input type="text"></div>
-                    <div>Priimek: <input type="text"></div>
+                    <div>Ime: <input type="text" placeholder="Peter"></div>
+                    <div>Priimek: <input type="text" placeholder="Planinec"></div>
                 </div>
 
                 <div>
-                    Email: <input id="email" type="text">
+                    Email: <input id="email" type="text" placeholder="Planinec-Peter@gmail.com">
                 </div>  
+
+                <div>
+                    Uporabniško ime: <input id="email"type="text" placeholder="Peter123">
+                </div>
+                
+                <div>
+                    Geslo: <input id=password type="text" placeholder="Peter123">
+                </div>
+
                 
                     
                     
@@ -27,7 +36,7 @@
             </div>
             
     <div class="right">
-
+        <!-- slika(logo) -->
     </div>
         
             
