--- a/templates/Register.html
+++ b/templates/Register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GremoGor</title>
-    <link rel="stylesheet" href="../static/css/register-css.css">
+    <link rel="stylesheet" href="../static/css/register.css">
 </head>
 <body>
     
@@ -25,11 +25,21 @@
                 </div>
                 
                 <div>
-                    Geslo: <input id=password type="text" placeholder="Peter123">
+                    Geslo: <input id=password type="password" placeholder="Peter123">
+                </div>
+                <br>
+                
+
+                <div class =registracija-login>
+                    <div>
+                        <input type="button" value="Registriraj"> 
+                    </div>
+                    <div>
+                        <input type="button" value="Prijava">
+                    </div>
                 </div>
 
                 
-                    
                     
                     
                     
@@ -37,6 +47,7 @@
             
     <div class="right">
         <!-- slika(logo) -->
+        <img src="../static/logo.png" alt="logo">
     </div>
         
             
