--- a/templates/Register.html
+++ b/templates/Register.html
@@ -25,17 +25,18 @@
                 </div>
                 
                 <div>
-                    Geslo: <input id=password type="password" placeholder="Peter123">
+                    Geslo: <input id=password type="password" placeholder="*********">
                 </div>
                 <br>
                 
 
                 <div class =registracija-login>
                     <div>
-                        <input type="button" value="Registriraj"> 
+                       <input type="button" value="Registriraj">
                     </div>
+                    Sem že registriran -
                     <div>
-                        <input type="button" value="Prijava">
+                        <a href="../templates/Login.html"><input type="button" value="Prijava"></a>
                     </div>
                 </div>
 
