--- a/templates/Register.html
+++ b/templates/Register.html
@@ -11,6 +11,7 @@
     <div class="register">
             <div class="left">
                 <h1>Registracija:</h1>
+                <from method="Post">
                 <div class="imepriimek">
                     <div>Ime: <input type="text" placeholder="Peter"></div>
                     <div>Priimek: <input type="text" placeholder="Planinec"></div>
@@ -34,6 +35,7 @@
                     <div>
                        <input type="button" value="Registriraj">
                     </div>
+                </form>
                     Sem že registriran -
                     <div>
                         <a href="../templates/Login.html"><input type="button" value="Prijava"></a>
