delno narejen program

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
         <div><a href=#><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/Triglav_-_winter.jpg/270px-Triglav_-_winter.jpg"><br>*Ime Gore*</a></div>
         <div><a href=#><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/Triglav_-_winter.jpg/270px-Triglav_-_winter.jpg"><br>*Ime Gore*</a></div>
     </div>
-    {%if prijava%} <!--dokončaj-->
+    <!--{if prijava%} <!--dokončaj-->
     <div class="selector"> <!--spremeni po dodajanju prijave-->
         <!--neprijavljen + odstrani class če ni prijave-->
         <!--<p class="obvestilo">Za uporabo funkcije prijatelji se prijavite</p>-->
