delno delujoča prijava (vpis podatkov v session), izpis uporabnika v index

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
             <li><a href="#">Regije</a></li>
             <li><a href="#">Celine</a></li>
             <li><a href="#">Države</a></li>
-            <li><a href="#">račun</a></li>
+            <li><a href="#">{{user}}</a></li>
         </ol>
     </div>
     <div class="selector"> <!--spremeni med izdelavo programa + odstrani class če ni prijave-->
