--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
                 <li><a href="/register">Register</a></li>
                 <li><a href="/login">Login</a></li>
             {% else %}
-                <li><a href="/profile">{{user}}</a></li>
+            stran <li><a href="/profile">{{user}}</a></li> <!--Naredi profilno stran--> 
                 <li><a href="/logout">Logout</a></li>
             {% endif %}
         </ol>
