--- a/templates/settings/profile.html
+++ b/templates/settings/profile.html
@@ -11,7 +11,8 @@
         
         <div class="left">
            <ul class="selector">
-                <li><a href="set/profile/">Profil</a></li>
+                <li><a href="/">◀️</a></li>
+                <li><a href="set/profile/" class="active">Profil</a></li>
                 <li><a href="set/privacy/">Zasebnost</a></li>
                 <li><a href="set/del/">Izbris računa</a></li>
             </ul>        
@@ -21,7 +22,7 @@
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/Mona_Lisa%2C_by_Leonardo_da_Vinci%2C_from_C2RMF_retouched.jpg/1200px-Mona_Lisa%2C_by_Leonardo_da_Vinci%2C_from_C2RMF_retouched.jpg">
             <br>
             <div>
-            <form method="POST" action="set/profile">
+            <form method="POST" action="/profile">
                 <p>Ime: <input type="text" name="ime" placeholder="{{ime}}"></p>
                 <p>Priimek: <input type="text" name="priimek" placeholder="{{priimek}}"></p>
                 <br>
