--- a/templates/settings/profile.html
+++ b/templates/settings/profile.html
@@ -22,7 +22,7 @@
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/Mona_Lisa%2C_by_Leonardo_da_Vinci%2C_from_C2RMF_retouched.jpg/1200px-Mona_Lisa%2C_by_Leonardo_da_Vinci%2C_from_C2RMF_retouched.jpg">
             <br>
             <div>
-            <form method="POST" action="/profile">
+            <form method="POST" action="/set">
                 <p>Ime: <input type="text" name="ime" placeholder="{{ime}}"></p>
                 <p>Priimek: <input type="text" name="priimek" placeholder="{{priimek}}"></p>
                 <br>
