--- a/templates/settings/profile.html
+++ b/templates/settings/profile.html
@@ -12,9 +12,9 @@
         <div class="left">
            <ul class="selector">
                 <li><a href="/">◀️</a></li>
-                <li><a href="set/profile/" class="active">Profil</a></li>
-                <li><a href="set/privacy/">Zasebnost</a></li>
-                <li><a href="set/del/">Izbris računa</a></li>
+                <li><a href="/set/profile/" class="active">Profil</a></li>
+                <li><a href="/set/privacy/">Zasebnost</a></li>
+                <li><a href="/set/del/">Izbris računa</a></li>
             </ul>        
         </div>
         
