popravki (username se ne sme podvajati)

--- a/templates/settings/profile.html
+++ b/templates/settings/profile.html
@@ -19,7 +19,7 @@
         </div>
         
         <div class="right">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/Mona_Lisa%2C_by_Leonardo_da_Vinci%2C_from_C2RMF_retouched.jpg/1200px-Mona_Lisa%2C_by_Leonardo_da_Vinci%2C_from_C2RMF_retouched.jpg">
+            <a href="/set/profile/src"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/Mona_Lisa%2C_by_Leonardo_da_Vinci%2C_from_C2RMF_retouched.jpg/1200px-Mona_Lisa%2C_by_Leonardo_da_Vinci%2C_from_C2RMF_retouched.jpg"></a>
             <br>
             <div>
             <form method="POST" action="/set">
